Try to fix pricing plans wrapping issue in Safari

--- a/app/assets/stylesheets/organisms/_plans.scss
+++ b/app/assets/stylesheets/organisms/_plans.scss
@@ -2,4 +2,8 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+
+  .plan {
+    flex: 1 0 auto;
+  }
 }
